--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "psr-0": { "Symfony\\Bridge\\Propel1": "" }
     },
     "target-dir": "Symfony/Bridge/Propel1",
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
             "dev-master": "2.1-dev"
