--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "propel/propel1": "1.6.*"
     },
     "autoload": {
-        "psr-0": { "Symfony\\Bridge\\Propel1": "" }
+        "psr-0": { "Symfony\\Bridge\\Propel1\\": "" }
     },
     "target-dir": "Symfony/Bridge/Propel1",
     "minimum-stability": "dev",
