--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/http-foundation": "2.2.*",
-        "symfony/http-kernel": "2.2.*",
+        "symfony/http-kernel": "~2.0",
         "symfony/form": ">=2.2,<2.3-dev",
         "propel/propel1": "1.6.*"
     },
