--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         "php": ">=5.3.3",
         "symfony/http-foundation": "~2.0",
         "symfony/http-kernel": "~2.0",
-        "symfony/form": ">=2.2,<2.4-dev",
+        "symfony/form": "~2.2",
         "propel/propel1": "1.6.*"
     },
     "require-dev": {
-        "symfony/stopwatch": ">=2.2,<2.4-dev"
+        "symfony/stopwatch": "~2.2"
     },
     "autoload": {
         "psr-0": { "Symfony\\Bridge\\Propel1\\": "" }
